--- a/.github/workflows/cobrinha.yml
+++ b/.github/workflows/cobrinha.yml
@@ -2,7 +2,7 @@ name: Generate Datas
 
 on:
   schedule: # execute every 12 hours
-    - cron:  '30 5,17 * * *'
+  - cron: "* */12 * * *"
   workflow_dispatch:
 
 jobs:
