--- a/.github/workflows/cobrinha.yml
+++ b/.github/workflows/cobrinha.yml
@@ -14,7 +14,7 @@ jobs:
       - uses: Platane/snk@master
         id: snake-gif
         with:
-          github_user_name: Jeferson9086
+          github_user_name: cassiadeandrade
 
           svg_out_path: dist/github-contribution-grid-snake.svg
 
